package entity.role;

public class Goblin extends Enemy {

    public Goblin(String name) {
        super(name, 40, 10, 14, 3);
    }

    @Override
    public void takeTurn(Role target) {
        attack(target);
    }
}
